<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pegasys.rapmedixuser.activity.newactivities.AboutusActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/MyToolbar"
            app:title=""
            app:titleTextColor="@color/white">

            <ImageView
                android:id="@+id/backbutton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="1dp"
                android:tint="@color/white"
                android:src="@drawable/back_arrow"/>

            <com.example.pegasys.rapmedixuser.activity.customviews.CustomTextViewBold
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:text="@string/app_name"
                android:textSize="@dimen/_16sdp"
                />

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.pegasys.rapmedixuser.activity.customviews.CustomTextViewNormal
                android:id="@+id/text_about_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/about_1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.example.pegasys.rapmedixuser.activity.customviews.CustomTextViewNormal
                android:id="@+id/text_about_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/about_2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.example.pegasys.rapmedixuser.activity.customviews.CustomTextViewNormal
                android:id="@+id/text_about_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/about_3"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.example.pegasys.rapmedixuser.activity.customviews.CustomTextViewNormal
                android:id="@+id/text_about_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/about_4"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
